# LEDES

./: CHANGES.md  LICENSE  README.md  dune-project  ledes.opam
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
LEDES/: index.html
LEDES/ledes/: index.html
LEDES/ledes/Ledes/: index.html
LEDES/ledes/Ledes/Ledes1998b/: index.html
LEDES/ledes/Ledes/Ledes98bi/: index.html
lib/: common.ml  dune  ledes.ml  ledes1998b.ml  ledes1998b.mli  ledes98bi.ml  ledes98bi.mli
test/: dune  test_ledes.ml
test/data/: ledes1998b_eager_bad.txt  ledes1998b_greedy_bad.txt  ledes98bi_eager_bad.txt  ledes98bi_good.txt  ledes98bi_greedy_bad.txt
